# llm

./: README.md  pyproject.toml
agents-design-in-6-ways/: README.md
bilibili_langchain/: README.md  langchain_basic_arc.ipynb
geek_agents_boot_camp/: README.md
geek_agents_boot_camp/chapter_1_about_agents/: agents_development_paradigm.ipynb
geek_agents_boot_camp/pre_study/: key_point_in_llm.ipynb
