[project]
name = "llm"
version = "0.1.0"
description = ""
authors = [
    {name = "Zheng Yuhao",email = "zheng.yuhao@cloud-ace.jp"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter-contrib-nbextensions (>=0.7.0,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

