[project]
name = "llm"
version = "0.1.0"
description = ""
authors = [
    {name = "Zheng Yuhao",email = "zheng.yuhao@cloud-ace.jp"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "jupyter-contrib-nbextensions (>=0.7.0,<0.8.0)",
    "langchain (>=0.3.23,<0.4.0)",
    "langchain-google-vertexai (>=2.0.19,<3.0.0)",
    "langchain-google-genai (>=2.1.2,<3.0.0)",
    "langsmith (>=0.3.24,<0.4.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

